[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPlanAnalysis"
version = "1.0.0"
description = "DVH, LVH, and DLVH analysis for proton therapy DICOM plans, with variable-RBE modelling and NTCP scoring."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Giovanni Parrella" }
]
keywords = ["proton therapy", "radiotherapy", "DVH", "NTCP", "medical physics", "RayStation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pydicom",
    "scikit-image",
    "openpyxl",       # required by pandas to read .xlsx (NTCP parameter workbook)
    "SimpleITK",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/oncoray/PyPlanAnalysis"
Repository = "https://github.com/oncoray/PyPlanAnalysis"

# --- src layout -------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# Ship the bundled NTCP parameter workbook inside the wheel/sdist
[tool.setuptools.package-data]
"PyPlanAnalysis.data" = ["*.xlsx"]
